<resources>
    <string name="app_name">HonkaiProject</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">Honkai Star Rail</string>
    <string name="second_fragment_label">Personagens</string>
    <string name="third_fragment_label">Temas</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string-array name="theme">
        <item>Escolha um tema:</item>
        <item>Jarilo VI</item>
        <item>Xianzhou</item>
        <item>Penacony</item>
    </string-array>

    <string name="searchCharacter">Digite o nome do personagem</string>
    <string name="back">Voltar</string>
    <string name="name">Nome: </string>
    <string name="characters">Personagens</string>
    <string name="music">Temas</string>
    <string name="map">Mapa</string>
    <string name="avatar">Avatar</string>
    <string name="relic">Relíquias</string>
    <string name="twopeace">2 peças: </string>
    <string name="fourpeace">4 peças: </string>
    <string name="light">Modo claro</string>
    <string name="dark">Modo escuro</string>
    <string name="exit">Sair</string>
    <string name="setting">Configuração</string>
</resources>