<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FourthFragment">

    <Button
        android:id="@+id/btnFourthBackFirst"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="120dp"
        android:layout_marginLeft="120dp"
        android:layout_marginTop="650dp"
        android:text="@string/back"
        android:textSize="20sp"
        android:textColor="@android:color/white"/>

    <TextView
        android:id="@+id/txtTitle"
        android:layout_width="30dp"
        android:layout_height="50dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="100dp"
        android:layout_marginRight="100dp"
        android:textAlignment="center"
        android:textSize="30sp"
        android:text="@string/relic"/>

    <GridView
        android:id="@+id/gridRelic"
        android:layout_width="50dp"
        android:layout_height="350dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:numColumns="3"
        android:gravity="center"
        android:verticalSpacing="15dp"
        android:layout_marginStart="3dp"
        android:layout_marginTop="100dp"/>

    <TextView
        android:id="@+id/txtName"
        android:layout_width="80dp"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="15dp"
        android:layout_marginTop="460dp"
        android:textSize="16sp"
        android:textStyle="bold"
        android:text="@string/name"/>

    <TextView
        android:id="@+id/txtNameResult"
        android:layout_width="80dp"
        android:layout_height="35dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="15dp"
        android:layout_marginStart="70dp"
        android:layout_marginTop="460dp"
        android:textSize="16sp"
        android:textStyle="normal"
        android:text=""/>

    <TextView
        android:id="@+id/txtTwoPeace"
        android:layout_width="80dp"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="500dp"
        android:layout_marginStart="15dp"
        android:textSize="16sp"
        android:textStyle="bold"
        android:text="@string/twopeace"/>

    <TextView
        android:id="@+id/txtTwoPeaceResult"
        android:layout_width="80dp"
        android:layout_height="35dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="15dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="500dp"
        android:textSize="16sp"
        android:textStyle="normal"
        android:text=""/>

    <TextView
        android:id="@+id/txtFourPeace"
        android:layout_width="80dp"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="540dp"
        android:layout_marginStart="15dp"
        android:textSize="16sp"
        android:textStyle="bold"
        android:text="@string/fourpeace"/>

    <TextView
        android:id="@+id/txtFourPeaceResult"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="80dp"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="540dp"
        android:textSize="16sp"
        android:textStyle="normal"
        android:text=""/>

</RelativeLayout>